<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="telas.MainActivity">


    <TextView
        android:id="@+id/tVUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digusu"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVUsuario" />

    <TextView
        android:id="@+id/tVsenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTUsuario"
        tools:text="@string/senha" />

    <EditText
        android:id="@+id/eTSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/digsen"
        android:inputType="textPassword"
        android:nextFocusLeft="@id/bCalcular"
        android:nextFocusRight="@id/bCalcular"
        android:nextFocusUp="@id/bCalcular"
        android:nextFocusDown="@id/bCalcular"
        android:nextFocusForward="@id/bCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVsenha"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/bLogar"
        android:layout_width="165dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:onClick="logar"
        android:text="@string/logar"
        app:layout_constraintStart_toEndOf="@+id/bLimpar"
        app:layout_constraintTop_toBottomOf="@+id/eTSenha"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/bLimpar"
        android:layout_width="173dp"
        android:layout_height="57dp"
        android:layout_marginTop="44dp"
        android:onClick="limpar"
        android:text="@string/limpar"
        app:layout_constraintTop_toBottomOf="@+id/eTSenha"
        tools:ignore="ButtonStyle,MissingConstraints"
        tools:layout_editor_absoluteX="28dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="344dp"
        android:layout_height="228dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_dropdown_dark_frame"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLimpar"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>